fix: dark mode, query, matching

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -78,6 +78,7 @@
   }
   @media screen and (prefers-color-scheme: dark) {
     background-color: rgba(25, 25, 25, 0.7);
+    color: rgba(255, 255, 255, 0.8);
     .dark-invert {
       filter: invert(1) hue-rotate(180deg);
     }
